web-console/src/views/query-view/parser.js
module.exports
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */ = (function() {
  'use strict';

  function peg$subclass(child, parent) {
    function ctor() {
      this.constructor = child;
    }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = 'SyntaxError';

    if (typeof Error.captureStackTrace === 'function') {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
      literal: function(expectation) {
        return '"' + literalEscape(expectation.text) + '"';
      },

      class: function(expectation) {
        var escapedParts = '',
          i;

        for (i = 0; i < expectation.parts.length; i++) {
          escapedParts +=
            expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + '-' + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
        }

        return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']';
      },

      any: function(expectation) {
        return 'any character';
      },

      end: function(expectation) {
        return 'end of input';
      },

      other: function(expectation) {
        return expectation.description;
      },
    };

    function hex(ch) {
      return ch
        .charCodeAt(0)
        .toString(16)
        .toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g, '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, function(ch) {
          return '\\x0' + hex(ch);
        })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
          return '\\x' + hex(ch);
        });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g, '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g, function(ch) {
          return '\\x0' + hex(ch);
        })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
          return '\\x' + hex(ch);
        });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
        i,
        j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + ' or ' + descriptions[1];

        default:
          return (
            descriptions.slice(0, -1).join(', ') + ', or ' + descriptions[descriptions.length - 1]
          );
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : 'end of input';
    }

    return 'Expected ' + describeExpected(expected) + ' but ' + describeFound(found) + ' found.';
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},
      peg$startRuleFunctions = { Query: peg$parseQuery },
      peg$startRuleFunction = peg$parseQuery,
      peg$c0 = 'select',
      peg$c1 = peg$literalExpectation('SELECT', true),
      peg$c2 = function(selectParts, from, where, groupby, orderBy, limit) {
        return {
          type: 'query',
          queryType: 'SELECT',
          selectParts: selectParts,
          from: from,
          where: where,
          groupby: groupby,
          orderBy: orderBy,
          limit: limit,
        };
      },
      peg$c3 = '(',
      peg$c4 = peg$literalExpectation('(', false),
      peg$c5 = ')',
      peg$c6 = peg$literalExpectation(')', false),
      peg$c7 = ',',
      peg$c8 = peg$literalExpectation(',', false),
      peg$c9 = function(selectPart, alias) {
        return {
          type: 'selectPart',
          expr: selectPart,
          alias: alias,
        };
      },
      peg$c10 = 'FROM',
      peg$c11 = peg$literalExpectation('FROM', false),
      peg$c12 = /^[a-zA-Z]/,
      peg$c13 = peg$classExpectation([['a', 'z'], ['A', 'Z']], false, false),
      peg$c14 = '.',
      peg$c15 = peg$literalExpectation('.', false),
      peg$c16 = '"',
      peg$c17 = peg$literalExpectation('"', false),
      peg$c18 = function(schema, table) {
        return {
          type: 'From',
          schema: schema ? schema[0].join('') : null,
          table: table.join(''),
        };
      },
      peg$c19 = 'where',
      peg$c20 = peg$literalExpectation('WHERE', true),
      peg$c21 = function(binaryExpression) {
        return binaryExpression;
      },
      peg$c22 = 'group by',
      peg$c23 = peg$literalExpectation('GROUP BY', true),
      peg$c24 = function(value) {
        return value;
      },
      peg$c25 = 'order by',
      peg$c26 = peg$literalExpectation('ORDER BY', true),
      peg$c27 = function(orderByParts) {
        return orderByParts;
      },
      peg$c28 = 'DESC',
      peg$c29 = peg$literalExpectation('DESC', false),
      peg$c30 = 'ASC',
      peg$c31 = peg$literalExpectation('ASC', false),
      peg$c32 = function(expr, direction) {
        return {
          type: 'orderByPart',
          expr: expr,
          direction: direction,
        };
      },
      peg$c33 = 'limit',
      peg$c34 = peg$literalExpectation('LIMIT', true),
      peg$c35 = function(value) {
        return {
          value,
        };
      },
      peg$c36 = 'CASE',
      peg$c37 = peg$literalExpectation('CASE', false),
      peg$c38 = 'WHEN',
      peg$c39 = peg$literalExpectation('WHEN', false),
      peg$c40 = 'else',
      peg$c41 = peg$literalExpectation('ELSE', true),
      peg$c42 = 'END',
      peg$c43 = peg$literalExpectation('END', false),
      peg$c44 = function(caseValue, whenClause, elseValue) {
        return {
          type: 'case',
          caseValue: caseValue,
          when: whenClause,
          ElseValue: elseValue,
        };
      },
      peg$c45 = 'when',
      peg$c46 = peg$literalExpectation('WHEN', true),
      peg$c47 = 'then',
      peg$c48 = peg$literalExpectation('THEN', true),
      peg$c49 = function(when, then) {
        return {
          when: when,
          then: then,
        };
      },
      peg$c50 = function(lhs, BinaryOperator, rhs) {
        return {
          type: 'binaryExpression',
          operato: BinaryOperator,
          lhs: lhs,
          rhs: rhs,
        };
      },
      peg$c51 = function(lhs, operator, rhs) {
        return {
          type: 'Expression',
          operator: operator,
          lhs: lhs,
          rhs: rhs,
        };
      },
      peg$c52 = /^[a-zA-Z_]/,
      peg$c53 = peg$classExpectation([['a', 'z'], ['A', 'Z'], '_'], false, false),
      peg$c54 = function(functionCall, argument) {
        return {
          type: 'function',
          functionCall: functionCall,
          arguments: Array.isArray(argument) ? argument.join('') : argument,
        };
      },
      peg$c55 = "'",
      peg$c56 = peg$literalExpectation("'", false),
      peg$c57 = /^[a-zA-Z_0-9]/,
      peg$c58 = peg$classExpectation([['a', 'z'], ['A', 'Z'], '_', ['0', '9']], false, false),
      peg$c59 = function(value) {
        return {
          type: 'variable',
          value: value.join(''),
        };
      },
      peg$c60 = function(value) {
        return {
          type: 'Constant',
          value: value.join(''),
        };
      },
      peg$c61 = /^[0-9]/,
      peg$c62 = peg$classExpectation([['0', '9']], false, false),
      peg$c63 = function(value) {
        return {
          type: 'Integer',
          value: value.join(''),
        };
      },
      peg$c64 = '+',
      peg$c65 = peg$literalExpectation('+', false),
      peg$c66 = '-',
      peg$c67 = peg$literalExpectation('-', false),
      peg$c68 = '/',
      peg$c69 = peg$literalExpectation('/', false),
      peg$c70 = '*',
      peg$c71 = peg$literalExpectation('*', false),
      peg$c72 = 'interval',
      peg$c73 = peg$literalExpectation('INTERVAL', true),
      peg$c74 = "/'",
      peg$c75 = peg$literalExpectation("/'", false),
      peg$c76 = function(value, constant) {
        return {
          type: 'interval',
          value: value,
          constant: constant,
        };
      },
      peg$c77 = 'as',
      peg$c78 = peg$literalExpectation('AS', true),
      peg$c79 = function(value) {
        return value.join('');
      },
      peg$c80 = 'min',
      peg$c81 = peg$literalExpectation('MIN', true),
      peg$c82 = 'max',
      peg$c83 = peg$literalExpectation('MAX', true),
      peg$c84 = 'count',
      peg$c85 = peg$literalExpectation('COUNT', true),
      peg$c86 = 'avg',
      peg$c87 = peg$literalExpectation('AVG', true),
      peg$c88 = 'sum',
      peg$c89 = peg$literalExpectation('SUM', true),
      peg$c90 = 'Or',
      peg$c91 = peg$literalExpectation('Or', false),
      peg$c92 = 'and',
      peg$c93 = peg$literalExpectation('and', false),
      peg$c94 = '>=',
      peg$c95 = peg$literalExpectation('>=', false),
      peg$c96 = '>',
      peg$c97 = peg$literalExpectation('>', false),
      peg$c98 = '=<',
      peg$c99 = peg$literalExpectation('=<', false),
      peg$c100 = '=',
      peg$c101 = peg$literalExpectation('=', false),
      peg$c102 = '<',
      peg$c103 = peg$literalExpectation('<', false),
      peg$c104 = peg$otherExpectation('whitespace'),
      peg$c105 = /^[ \t\n\r]/,
      peg$c106 = peg$classExpectation([' ', '\t', '\n', '\r'], false, false),
      peg$c107 = function() {
        return {
          type: 'star',
        };
      },
      peg$c108 = 'from',
      peg$c109 = peg$literalExpectation('FROM', true),
      peg$currPos = 0,
      peg$savedPos = 0,
      peg$posDetailsCache = [{ line: 1, column: 1 }],
      peg$maxFailPos = 0,
      peg$maxFailExpected = [],
      peg$silentFails = 0,
      peg$result;

    if ('startRule' in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error('Can\'t start parsing from rule "' + options.startRule + '".');
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location,
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: 'literal', text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: 'class', parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: 'any' };
    }

    function peg$endExpectation() {
      return { type: 'end' };
    }

    function peg$otherExpectation(description) {
      return { type: 'other', description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
        p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line: details.line,
          column: details.column,
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line: startPosDetails.line,
          column: startPosDetails.column,
        },
        end: {
          offset: endPos,
          line: endPosDetails.line,
          column: endPosDetails.column,
        },
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) {
        return;
      }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location,
      );
    }

    function peg$parseQuery() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 6).toLowerCase() === peg$c0) {
        s1 = input.substr(peg$currPos, 6);
        peg$currPos += 6;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c1);
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseSelectParts();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseFrom();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseWhere();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse_();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseGroupBy();
                      if (s9 === peg$FAILED) {
                        s9 = null;
                      }
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parse_();
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parseOrderBy();
                          if (s11 === peg$FAILED) {
                            s11 = null;
                          }
                          if (s11 !== peg$FAILED) {
                            s12 = peg$parse_();
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parseLimit();
                              if (s13 === peg$FAILED) {
                                s13 = null;
                              }
                              if (s13 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c2(s3, s5, s7, s9, s11, s13);
                                s0 = s1;
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSelectParts() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseSelectPart();
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parseSelectPart();
        }
      } else {
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSelectPart() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseReservedWord();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = void 0;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 40) {
            s3 = peg$c3;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$c4);
            }
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseCase();
            if (s4 === peg$FAILED) {
              s4 = peg$parseVariable();
              if (s4 === peg$FAILED) {
                s4 = peg$parseFunction();
                if (s4 === peg$FAILED) {
                  s4 = peg$parseConstant();
                }
              }
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c5;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$c6);
                }
              }
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsealias();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 44) {
                      s8 = peg$c7;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) {
                        peg$fail(peg$c8);
                      }
                    }
                    if (s8 === peg$FAILED) {
                      s8 = null;
                    }
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c9(s4, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFrom() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c10) {
        s1 = peg$c10;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c11);
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          if (peg$c12.test(input.charAt(peg$currPos))) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$c13);
            }
          }
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              if (peg$c12.test(input.charAt(peg$currPos))) {
                s5 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$c13);
                }
              }
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 46) {
              s5 = peg$c14;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$c15);
              }
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 34) {
              s4 = peg$c16;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$c17);
              }
            }
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              if (peg$c12.test(input.charAt(peg$currPos))) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$c13);
                }
              }
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  if (peg$c12.test(input.charAt(peg$currPos))) {
                    s6 = input.charAt(peg$currPos);
                    peg$currPos++;
                  } else {
                    s6 = peg$FAILED;
                    if (peg$silentFails === 0) {
                      peg$fail(peg$c13);
                    }
                  }
                }
              } else {
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 34) {
                  s6 = peg$c16;
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) {
                    peg$fail(peg$c17);
                  }
                }
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c18(s3, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseWhere() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5).toLowerCase() === peg$c19) {
        s1 = input.substr(peg$currPos, 5);
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c20);
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseBinaryExpression();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c21(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseGroupBy() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8).toLowerCase() === peg$c22) {
        s1 = input.substr(peg$currPos, 8);
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c23);
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseInteger();
          if (s4 === peg$FAILED) {
            s4 = peg$parseVariable();
            if (s4 === peg$FAILED) {
              s4 = peg$parseConstant();
            }
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parseInteger();
              if (s4 === peg$FAILED) {
                s4 = peg$parseVariable();
                if (s4 === peg$FAILED) {
                  s4 = peg$parseConstant();
                }
              }
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c24(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseOrderBy() {
      var s0, s1, s2, s3, s4;
